src/Major Assignment/objects/Transaction_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Day__c</fullName>
        <label>Maximum Debit Allowed per Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Month__c</fullName>
        <label>Maximum Debit Allowed per Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Transaction__c</fullName>
        <label>Maximum Debit Allowed per Transaction</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Day__c</fullName>
        <label>Maximum Transactions Allowed per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Month__c</fullName>
        <label>Maximum Transactions Allowed per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Limit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Limits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Day</fullName>
        <active>false</active>
        <description>Maximum debit allowed forty thousand</description>
        <errorConditionFormula>40000 &gt;= Maximum_Debit_Allowed_per_Day__c</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Day__c</errorDisplayField>
        <errorMessage>Debit Limit exceed more than forty thousand.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Month</fullName>
        <active>false</active>
        <description>Customer can not debit more than twelve lakh in a month</description>
        <errorConditionFormula>1200000 &gt;= Maximum_Debit_Allowed_per_Month__c</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Month__c</errorDisplayField>
        <errorMessage>Debit Limit exceed more than one million two hundred thousand</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Transaction</fullName>
        <active>false</active>
        <description>Maximum debit allowed twenty thousand per transaction.</description>
        <errorConditionFormula>20000 &gt;= Maximum_Debit_Allowed_per_Transaction__c</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Transaction__c</errorDisplayField>
        <errorMessage>Maximum debit allowed twenty thousand per transaction.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Transactions_Allowed_per_Day</fullName>
        <active>false</active>
        <description>Three maximum transaction allowed in a day</description>
        <errorConditionFormula>3 &gt;= Maximum_Transactions_Allowed_per_Day__c</errorConditionFormula>
        <errorDisplayField>Maximum_Transactions_Allowed_per_Day__c</errorDisplayField>
        <errorMessage>Transaction limit exceed more than three times in a day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Transactions_Allowed_per_Month</fullName>
        <active>false</active>
        <description>Customer can not able to do transactions more than ninety times.</description>
        <errorConditionFormula>90 &gt;= Maximum_Transactions_Allowed_per_Month__c</errorConditionFormula>
        <errorDisplayField>Maximum_Transactions_Allowed_per_Month__c</errorDisplayField>
        <errorMessage>Transaction limit exceed more than ninety times</errorMessage>
    </validationRules>
</CustomObject>